Ui changes in login page and header page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,16 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.app-container {
+  margin-top: 64px; /* Match height of header */
+}
+
+a {
+  text-decoration: none;
+}
+
 .btn {
   background: unset;
   border: none;
